src/test/fixtures/native_inspection/case_sensitive.good.fixture.php
<?php

class AbC {}

$a = new <error descr="Case in class usage doesn't match the case in declaration">aBc</error>();
